--- a/dashboards/sample.html
+++ b/dashboards/sample.html
@@ -1,3 +1,4 @@
+{{define `sample`}}
 <html>
 <head>
 	<title>Dashboard - 1</title>
@@ -5,7 +6,8 @@
 </head>
 <body>
 	<div>
-		
+		{{template "hello"	"World"}}
 	</div>
 </body>
 </html>
+{{end}}
