widgets with attributes

--- a/dashboards/sample.html
+++ b/dashboards/sample.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 	<div>
-		{{template "hello"	"World"}}
+		{{template "hello"	attr "msg" "Hello World"}}
+		{{template "hello"	attr "msg" "Second widget"}}
 	</div>
 </body>
 </html>
